--- a/fashion-six.html
+++ b/fashion-six.html
@@ -310,12 +310,12 @@
       </div>
     </div>
     <!-- 5 image section -->
-    <div class="5-image flex justify-center w-[100%] pb-[100px]">
-      <img src="assets/fashion-6 image 1.jpg" alt="" width="205px" />
-      <img src="assets/fashion-6 image 2.jpg" alt="" width="205px" />
-      <img src="assets/fashion-6 image 3.jpg" alt="" width="205px" />
-      <img src="assets/fashion-6 image 4.jpg" alt="" width="205px" />
-      <img src="assets/fashion-6 image 5.jpg" alt="" width="205px" />
+    <div class="5-image pl-[30px] pr-[30px] md:gap-[40px] md:pl-[0] pr-[0] grid gap-y-10  grid-cols-1 md:grid-cols-2 lg:grid-cols-5  pb-[100px]">
+      <img class="w-[100%] lg:w-[205px]" src="assets/fashion-6 image 1.jpg" alt="" width="205px" />
+      <img class="w-[100%] lg:w-[205px]" src="assets/fashion-6 image 2.jpg" alt="" width="205px" />
+      <img class="w-[100%] lg:w-[205px]" src="assets/fashion-6 image 3.jpg" alt="" width="205px" />
+      <img class="w-[100%] lg:w-[205px]" src="assets/fashion-6 image 4.jpg" alt="" width="205px" />
+      <img class="w-[100%] lg:w-[205px]" src="assets/fashion-6 image 5.jpg" alt="" width="205px" />
     </div>
     <!-- footer section -->
     <footer class="bg-[#f6f6f8] pt-[100px] pb-[70px]">
